# m2m

./: .dockerignore  .gitignore  .md  .npmrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  VERIFICATION_PENDING.md  _test_brace.rs  count_braces.py  docker-compose.yml  fix.txt  frontend  index.html  package.json  pnpm-lock.yaml  project-audit.md  prompt.txt  review_part2.md  stitch-cipherhub.html  stitch-settings.html  stitch-setup.html  stitch-setup2.html  stitch-vault.html  test.txt  track_depth.py  track_depth2.py  track_depth3.py  ui-ux-upgrade-plan.md  vite.config.ts
.claude/: .env  settings.json
.claude/plans/: 10-10-master-upgrade.md  10-to-10-roadmap.md  phase-1-3-relay-server.md  phase-2-identity-export-and-family.md  phase-4-1-4-2-reactions-read-receipts.md  remaining-sweep.md  tier-b-testing-plan.md  uiux-10-10.md  uiux-phase1-impl.md  wire-tier2-discovery.md
.claude/skills/: commands-split-and-clippy.md  m2m-connection-architect.md
.github/workflows/: ci.yml
236/stitch_m2m_messenger/: design.md
UX/: UI.md
docs/: architecture.md  beginners-guide.md  benchmarks.md  comparison-simplex.md  comparison-vs-simplex.md  component-guide.md  design-bible-part2.md  design-bible-part3.md  design-bible-part4.md  design-bible.md  design-system.md  full_analysis.md  icon-system.md  invite-format.md  key-management.md  protocol-spec.md  security-checklist.md  storage-design.md  threat-model.md  tier2-explained-like-im-4.md  ui-ux-upgrade-phase-1-summary.md  wcag-contrast-audit.md
docs/adr/: 000-template.md  001-custom-relay-vs-turn.md  002-app-level-encryption-vs-sqlcipher.md  003-messagepack-vs-protobuf.md
plans/: file-transfer-improvements.md
relay-server/: Cargo.toml  Dockerfile  Makefile
relay-server/src/: main.rs
skills/: 01-progress-summary.md  02-remaining-plan.md  conversation-summary.md  fill_prompt.md
src/: App.css  App.tsx  main.tsx  toast.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  cargo_check_output.txt  check_err.txt  tauri.conf.json
src-tauri/benches/: crypto_bench.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: generate-identity.rs  relay-server.rs
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: frame_parse.rs  padding.rs
src-tauri/src/: candidate.rs  commands.rs  crypto.rs  dht.rs  ephemeral_id.rs  group.rs  hole_punch.rs  identity.rs  lan_discovery.rs  lib.rs  local_addr.rs  main.rs  network.rs  port_mapping.rs  protocol.rs  reconnect.rs  relay.rs  secure_key.rs  session.rs  state.rs  storage.rs  stun.rs  sync.rs  tor.rs  window_security.rs
src-tauri/src/commands/: chat.rs  discovery.rs  files.rs  forwards.rs  groups.rs  mod.rs  network.rs  relay.rs  security.rs  settings.rs  util.rs  vault.rs
src/__tests__/: AppContext.test.tsx  ChatContext.test.tsx  ChatView.test.tsx  HubView.test.tsx  SettingsContext.test.tsx  setup.ts  (+2 more)
(+161 files in other folders)
