[package]
name = "m2m-relay"
version = "0.1.0"
description = "M2M TCP Relay Server — standalone binary for self-hosting"
authors = ["M2M Contributors"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
